--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,21 @@
     padding: 0px;
     box-sizing: border-box;
 }
-.navbar{
-    border:1px solid red;
-    
+/* Navbar */
+.nav-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+@media (max-width:786px){
+    .nav-bar{
+        flex-direction: column;
+        gap: 3px;
+        padding: 5px;
+    }
+}
+
+
 /* Hero */
 .hero{
     background-image: url(./assets/hero.jpg);
@@ -38,4 +49,15 @@
     background-image: url("./assets/pizza3.jpg");
     height: 250px;
     width: 250px;
+}
+
+/* Navbar */
+.navlink{
+    color: rgb(252, 0, 0);
+    text-decoration: none;
+
+}
+.navlink:hover{
+    text-decoration: underline;
+    color:rgb(167, 24, 24);
 }
