--- a/src/index.css
+++ b/src/index.css
@@ -28,25 +28,24 @@
 }
 
 /* Explore Foods */
-.pizza1{
-    background-image: url("./assets/pizza1.jpg");
-    background-repeat: no-repeat;
-    height: 250px;
-    width: 250px;
+.pizza{
+    height: 41vh;
+    border-radius: 10px;
 }
-.pizza2{
-    background-image: url("./assets/pizza2.jpg");
-    height: 250px;
-    width: 250px;
-    background-repeat: no-repeat;
+.pizza:hover{
+    box-shadow: 0PX 3PX rgb(227, 194, 194);
+    transform: scale(1.01);
+    transition: all 0.5s linear;
+}
+.pizza img {
+    width: 300px;
+    border-radius: 10px;
+}
+.pizza p{
+    position: relative;
+    bottom: 30px;
+}
 
-}
-.pizza3{
-    background-repeat: no-repeat;
-    background-image: url("./assets/pizza3.jpg");
-    height: 250px;
-    width: 250px;
-}
 
 /* Navbar */
 .navlink{
